# MympRpc

./: CMakeLists.txt  README.md  autobuild.sh  client_run.sh  monitor_docker_into.sh  run.sh  server_run.sh
docker/: 额外需要安装的库，未写到dockerfile中.txt
docker/scripts/: monitor_docker_into.sh  monitor_docker_run.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cpp  userservice.cpp
example/caller/: CMakeLists.txt  callfriendservice.cpp  calluserservice.cpp
src/: CMakeLists.txt  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  rpcprovider.cpp  zookeeperutil.cpp
src/include/: mprpcapplication.h  mprpcconfig.h  rpcprovider.h  zookeeperutil.h
test/glog/: main  run.sh  test_log.cpp
test/protobuf/: CMakeLists.txt  main.cpp  test.pb.cc  test.pb.h
